tests/paczka1/small_fuzzy/35652448.err
Error in line 1: Vo2 A2x0 x,5
Error in line 6: erCdPWtxEQ9 S906 63,69
Error in line 7: erCdPWtxEQ9 S906 -1,4
Error in line 2: Vo2 A240 16,2
Error in line 13: S906 S604 39,6
